syntax = "proto3";
package admin;

import "common.proto";

option go_package = "github.com/saiponethaaung/language-learner/apps/api/admin";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool status  = 1;
    optional string accessToken = 2;
    optional common.ErrorResponse error = 3;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {

}

service AdminService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}