syntax="proto3";
package common;

option go_package = "github.com/saiponethaaung/language-learner/apps/api/common";

message ErrorResponse {
    string code = 1;
    string message = 2;
}

message EmptyRequest {}

message IDRequest {
    string id = 1;
}

message IntIDRequest {
    string id = 1;
}

message StatusResponse {
    bool status = 1;
    string message = 2;
}

message PaginationObject {
    int32 total = 1;
    int32 page = 2;
    int32 limit = 3;
    int32 totalPages = 4;
}